--- a/styles/hero/style.css
+++ b/styles/hero/style.css
@@ -5,6 +5,25 @@
   padding: 0;
 }
 
+.mobile {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.mobile img {
+  cursor: pointer;
+}
+
+.mobile h2 {
+  font-size: 1.5em;
+  margin-bottom: 0;
+  margin: 0 20px;
+}
+
 nav {
   max-width: 90vw;
   height: 5vh;
@@ -24,9 +43,7 @@ nav {
 }
 
 .nav-links {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -127,4 +144,8 @@ nav {
   height: 40%;
   left: 55%;
 }
+
+/* .nav-links{
+    display: none;
+} */
 /*# sourceMappingURL=style.css.map */
