--- a/styles/hero/style.scss
+++ b/styles/hero/style.scss
@@ -4,6 +4,18 @@
     padding:0;
 }
 
+.mobile{
+    display: flex;
+    align-items: center;
+ img{
+     cursor: pointer;
+ }
+    h2{
+     font-size: 1.5em;
+     margin-bottom:0;
+     margin:0 20px;
+    }
+}
 nav {
     max-width: 90vw;
     height: 5vh;
@@ -16,7 +28,7 @@ nav {
 }
 
 .nav-links{
-    display: flex;
+    display: none;
     flex-direction: row;
     align-items: center;
     font-size: .5em;
@@ -109,7 +121,8 @@ nav {
     }
 }
 
-
-
+/* .nav-links{
+    display: none;
+} */
 
 
