--- a/styles/shop/shop.css
+++ b/styles/shop/shop.css
@@ -64,6 +64,120 @@ a {
 
 .bar h4 {
   font-size: 1.5em;
-  margin-bottom: 5%;
+  margin-bottom: 1%;
+  padding: 1em;
+  padding-bottom: .6em;
+}
+
+.max-for-live {
+  background-image: url("https://ableton-production.imgix.net/shop/max-for-live--square.jpg?auto=format&dpr=2.0&fit=crop&fm=jpg&h=419&ixjsv=1.1.3&q=50&w=395");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+  height: 68vh;
+  width: 100vw;
+  color: white;
+  font-family: "Roboto";
+  background-color: black;
+}
+
+.max-for-live .max-text {
+  width: 70%;
+  padding: 2em;
+}
+
+.max-for-live h2 {
+  font-size: 1.5em;
+}
+
+.max-for-live a {
+  color: #b8b0b0;
+}
+
+.max-for-live h3 {
+  margin: 1em 0;
+}
+
+.max-for-live button {
+  color: #fff !important;
+  background: blue;
+  border: 0;
+  cursor: pointer;
+  padding: .3em 1.2em;
+  font-weight: 900;
+}
+
+.making-music {
+  height: 75vh;
+  width: 100vw;
+  color: black;
+  font-family: "Roboto";
+  background-color: #fcedd2;
+}
+
+.making-music-text {
+  width: 90%;
+  padding: 2em;
+  margin: auto;
+}
+
+.making-music-text h2 {
+  font-size: 1.5em;
+}
+
+.making-music-text a {
+  color: blue;
+}
+
+.making-music-text p {
+  margin: 1em 0;
+}
+
+.making-music-text button {
+  color: #fff !important;
+  background: blue;
+  border: 0;
+  cursor: pointer;
+  padding: .3em 1.2em;
+  font-weight: 900;
+}
+
+.making-music-text span {
+  color: gray;
+  font-weight: 1000;
+  font-size: .8em;
+}
+
+.colors {
+  width: 100vw;
+  height: 60vh;
+}
+
+.colors .green {
+  width: 100%;
+  height: 50%;
+  background-color: #b6ffc0;
+}
+
+.colors .blue {
+  width: 100%;
+  height: 50%;
+  background-color: #b1c5ff;
+}
+
+.colors .color-text {
+  padding: 2em;
+  font-family: "Roboto";
+  max-width: 450px;
+}
+
+.colors .color-text a {
+  text-decoration: none;
+  color: #0000ff;
+}
+
+.colors .color-text h2 {
+  font-size: 1.5em;
+  font-weight: 700;
 }
 /*# sourceMappingURL=shop.css.map */
