--- a/styles/shop/shop.scss
+++ b/styles/shop/shop.scss
@@ -55,6 +55,120 @@ a{
     flex-direction: column;
  h4{
 font-size: 1.5em;
-margin-bottom: 5%;
+margin-bottom: 1%;
+padding:1em;
+padding-bottom: .6em;
+
  }
 }
+
+.max-for-live{
+    background-image: url("https://ableton-production.imgix.net/shop/max-for-live--square.jpg?auto=format&dpr=2.0&fit=crop&fm=jpg&h=419&ixjsv=1.1.3&q=50&w=395");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 50%;
+    height: 68vh;
+    width:100vw;
+    color:white;
+    font-family: "Roboto";
+    background-color: black;
+   
+    .max-text{
+        width:70%;
+        padding: 2em;
+    }
+    h2{
+        font-size: 1.5em;
+    }
+    a{
+        color:rgb(184, 176, 176);
+    }
+
+    h3{
+        margin:1em 0
+    }
+  
+    button{
+        color: #fff !important;
+    background: blue;
+    border: 0;
+    cursor: pointer;
+    padding:.3em 1.2em;
+    font-weight: 900;
+    }
+}
+
+.making-music{
+  
+    height: 75vh;
+    width:100vw;
+    color:black;
+    font-family: "Roboto";
+    background-color:rgb(252, 237, 210);
+}
+
+.making-music-text{
+    width:90%;
+    padding: 2em;
+    margin:auto;
+
+h2{
+    font-size: 1.5em;
+}
+a{
+    color:blue;
+}
+
+p{
+    margin:1em 0;
+}
+button{
+    color: #fff !important;
+background: blue;
+border: 0;
+cursor: pointer;
+padding:.3em 1.2em;
+font-weight: 900;
+}
+span{
+    color:gray;
+    font-weight: 1000;
+    font-size: .8em;
+}
+
+}
+
+.colors{
+    width:100vw;
+    height:60vh;
+        .green{
+            width:100%;
+            height:50%;
+            background-color: #b6ffc0 ;
+        }
+
+
+        .blue{
+            width:100%;
+            height:50%;
+            background-color: #b1c5ff
+        }
+
+        .color-text{
+            padding:2em;
+            font-family: "Roboto";
+            max-width: 450px;
+            
+            a{
+                text-decoration: none;
+                color: #0000ff;
+            }
+
+
+            h2{
+                font-size: 1.5em;
+                font-weight: 700;
+            }
+        }
+}
+
