--- a/styles/footer/footer.css
+++ b/styles/footer/footer.css
@@ -8,10 +8,6 @@
   margin: auto;
 }
 
-.footer-text h2 {
-  font-size: 1.5em;
-}
-
 .image-div {
   margin-top: 10%;
   display: -ms-grid;
@@ -35,16 +31,16 @@
   margin: 15% 0;
 }
 
-.foot {
+.foot-text {
   width: 85%;
   margin-left: 10%;
 }
 
-.foot p {
+.foot-text p {
   margin: 5% 0;
 }
 
-.foot button {
+.foot-text button {
   color: #fff !important;
   background: blue;
   border: 0;
@@ -53,7 +49,7 @@
   font-weight: 900;
 }
 
-.foot input {
+.foot-text input {
   padding: .3em 1.2em;
   margin-bottom: 5%;
   background-color: #e9e9e9;
@@ -72,11 +68,59 @@
   grid-column-gap: 10px;
   grid-row-gap: 10px;
   height: auto;
+  max-width: 300px;
 }
 
 .socials img {
   height: 50px;
   width: 50px;
   cursor: pointer;
+}
+
+@media (min-width: 500px) {
+  .socials {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    gap: 10%;
+  }
+  .footer h2 {
+    font-size: 2.3em;
+  }
+  .footer p {
+    font-size: 1.2em;
+  }
+}
+
+@media (min-width: 800px) {
+  .methods {
+    margin: 5% 0;
+  }
+  .pay-images {
+    width: 140px;
+    height: 140px;
+  }
+  .image-div {
+    margin: 10% auto;
+  }
+  .footer-text {
+    max-width: 500px;
+    text-align: center;
+  }
+  .footer-text p {
+    font-size: 1.2em;
+  }
+  .bottom-hr {
+    margin: 5% 0;
+  }
+  .foot-text {
+    max-width: 500px;
+    text-align: center;
+    margin: auto;
+  }
 }
 /*# sourceMappingURL=footer.css.map */
