--- a/styles/hero/style.css
+++ b/styles/hero/style.css
@@ -5,6 +5,11 @@
   padding: 0;
 }
 
+body {
+  max-width: 100%;
+  /* overflow-x:hidden */
+}
+
 .mobile {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -22,6 +27,36 @@
   font-size: 1.5em;
   margin-bottom: 0;
   margin: 0 20px;
+  font-weight: 200;
+}
+
+.mobile-nav {
+  display: none;
+  width: 90vw;
+  height: 50vh;
+  padding: 2em;
+  position: absolute;
+  top: 10vh;
+  left: 5%;
+  background-color: white;
+  color: #ff764d;
+}
+
+.mobile-nav h2 {
+  font-size: 1.5em;
+  cursor: pointer;
+  border: 1px white solid;
+}
+
+.show {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 10px;
 }
 
 nav {
@@ -52,6 +87,7 @@ nav {
       -ms-flex-align: center;
           align-items: center;
   font-size: .5em;
+  cursor: pointer;
 }
 
 .nav-links h2 {
@@ -148,4 +184,35 @@ nav {
 /* .nav-links{
     display: none;
 } */
+@media (min-width: 600px) {
+  .mobile {
+    display: none;
+  }
+  .mobile-nav {
+    display: none;
+  }
+  .nav-links {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .hero {
+    background-image: url("https://ableton-production.imgix.net/about/header.jpg?auto=format&dpr=2&fit=crop&fm=jpg&h=716&ixjsv=1.1.3&q=50&w=702");
+  }
+  .hero h1 {
+    font-size: 4em;
+  }
+}
+
+@media (min-width: 1000px) {
+  .hero {
+    background-size: cover;
+  }
+  .hero h1 {
+    font-size: 5em;
+  }
+  .nav-links {
+    font-size: .7em;
+  }
+}
 /*# sourceMappingURL=style.css.map */
