--- a/styles/hero/style.scss
+++ b/styles/hero/style.scss
@@ -3,6 +3,10 @@
     margin:0;
     padding:0;
 }
+body{
+    max-width: 100%;
+    /* overflow-x:hidden */
+}
 
 .mobile{
     display: flex;
@@ -14,7 +18,34 @@
      font-size: 1.5em;
      margin-bottom:0;
      margin:0 20px;
+     font-weight: 200;
     }
+}
+
+.mobile-nav{
+    display:none;
+    width:90vw;
+    height:50vh;
+    padding:2em;
+    position: absolute;
+    top:10vh;
+    left:5%;
+    background-color:  white;
+color:
+#ff764d;
+
+h2{
+    font-size: 1.5em;
+    cursor: pointer;
+    border: 1px white solid;
+}
+}
+
+.show{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
 }
 nav {
     max-width: 90vw;
@@ -32,7 +63,7 @@ nav {
     flex-direction: row;
     align-items: center;
     font-size: .5em;
-
+    cursor: pointer;
     h2 {
         margin:0 10px
     }
@@ -126,3 +157,36 @@ nav {
 } */
 
 
+@media (min-width:600px) {
+    .mobile{
+display: none;
+    }
+
+    .mobile-nav{
+       display:none; 
+    }
+
+    .nav-links{
+        display:flex;
+        
+    }
+
+    .hero{
+        background-image: url("https://ableton-production.imgix.net/about/header.jpg?auto=format&dpr=2&fit=crop&fm=jpg&h=716&ixjsv=1.1.3&q=50&w=702");
+    h1{
+        font-size: 4em;
+    }
+    }
+}
+
+@media (min-width:1000px){
+    .hero{
+   background-size: cover;
+   h1{
+       font-size:5em
+   }
+    }
+    .nav-links{
+        font-size:.7em;
+    }
+}
