--- a/styles/footer/footer.scss
+++ b/styles/footer/footer.scss
@@ -31,6 +31,10 @@
     width:85%;
     margin-left:10%;
 
+        h2{
+            color:
+            #ff764d
+        }
     p{
         margin: 5% 0;
     }
@@ -109,7 +113,11 @@
 
     .foot-text {
         max-width: 500px;
-        text-align: center;
+        text-align: left;
         margin:auto;
+
+        h2{
+            font-size: 3.6em;
+        }
     }
 }
