--- a/styles/hero/style.css
+++ b/styles/hero/style.css
@@ -120,6 +120,10 @@ nav {
   font-family: 'Roboto', sans-serif;
 }
 
+.blue-span {
+  color: #0000ff;
+}
+
 .text {
   margin-top: 15%;
   font-family: 'Roboto', sans-serif;
@@ -204,6 +208,16 @@ nav {
   }
 }
 
+@media (min-width: 800px) {
+  .pics {
+    width: 70vw;
+    height: 70vh;
+  }
+  .nav-links {
+    font-size: .6em;
+  }
+}
+
 @media (min-width: 1000px) {
   .hero {
     background-size: cover;
@@ -213,6 +227,14 @@ nav {
   }
   .nav-links {
     font-size: .7em;
+  }
+  .hero {
+    margin-top: 2%;
+  }
+  .text {
+    width: 45%;
+    margin: 10% auto;
+    font-size: 1.5em;
   }
 }
 /*# sourceMappingURL=style.css.map */
