--- a/styles/hero/style.scss
+++ b/styles/hero/style.scss
@@ -93,6 +93,10 @@ nav {
      }
 }
 
+.blue-span{
+    color:#0000ff;
+}
+
 .text{
     margin-top:15%;
     font-family: 'Roboto', sans-serif;
@@ -179,6 +183,15 @@ display: none;
     }
 }
 
+@media (min-width:800px){
+.pics{
+    width:70vw;
+    height:70vh;
+}
+.nav-links{
+    font-size:.6em;
+}
+}
 @media (min-width:1000px){
     .hero{
    background-size: cover;
@@ -188,5 +201,15 @@ display: none;
     }
     .nav-links{
         font-size:.7em;
+    }
+
+    .hero{
+        margin-top: 2%;
+    }
+
+    .text{
+        width:45%;
+        margin: 10% auto;
+        font-size: 1.5em;
     }
 }
