--- a/styles/shop/shop.scss
+++ b/styles/shop/shop.scss
@@ -155,6 +155,7 @@ font-weight: 900;
             padding:2em;
             font-family: "Roboto";
             max-width: 450px;
+        margin:auto;
             
             a{
                 text-decoration: none;
@@ -173,6 +174,10 @@ font-weight: 900;
     .shop-split {
         display:flex;
         flex-direction: row;
+
+        h2{
+            font-size: 4em;
+        }
     }
 
     .push{
@@ -182,6 +187,9 @@ font-weight: 900;
     .second-split{
         display:flex;
         flex-direction: row;
+        h2{
+            font-size: 3em;
+        }
     }
 
     .max-for-live{
@@ -199,6 +207,10 @@ font-weight: 900;
             text-align: center;
             font-size: 1.2em;
             padding:4em;
+        }
+
+        h2{
+            font-size: 2.4em !important;
         }
     }
 }
