--- a/styles/hero/style.scss
+++ b/styles/hero/style.scss
@@ -5,7 +5,7 @@
 }
 body{
     max-width: 100%;
-    /* overflow-x:hidden */
+    overflow-x:hidden
 }
 
 .mobile{
@@ -191,6 +191,11 @@ display: none;
 .nav-links{
     font-size:.6em;
 }
+.text{
+    width:60%;
+    margin: 10% auto;
+    font-size: 1.5em;
+}
 }
 @media (min-width:1000px){
     .hero{
@@ -211,5 +216,8 @@ display: none;
         width:45%;
         margin: 10% auto;
         font-size: 1.5em;
+    }
+    p{
+        font-size: 1.1em;
     }
 }
