--- a/styles/footer/footer.css
+++ b/styles/footer/footer.css
@@ -130,4 +130,45 @@
     font-size: 3.6em;
   }
 }
+
+@media (min-width: 900px) {
+  .footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .footer-one {
+    margin-top: 6%;
+    width: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-bottom: 10%;
+  }
+  .methods {
+    width: 100%;
+    margin: auto 0;
+  }
+  .footer-text {
+    margin: auto;
+  }
+  .footer-two {
+    width: 50%;
+    margin: auto 0;
+  }
+}
 /*# sourceMappingURL=footer.css.map */
