--- a/styles/shop/shop.scss
+++ b/styles/shop/shop.scss
@@ -154,7 +154,7 @@ font-weight: 900;
         .color-text{
             padding:2em;
             font-family: "Roboto";
-            max-width: 450px;
+            max-width: 480px;
         margin:auto;
             
             a{
@@ -210,9 +210,12 @@ font-weight: 900;
             margin:auto;
             text-align: center;
             font-size: 1.2em;
-            padding:4em;
-            max-height: 313px;
-            
+            padding:3.9em;
+            max-height: 300px;
+            max-width: 400px;
+        }
+        .blue{
+            padding-left:2%
         }
 
         h2{
